--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
     "es2021": true
   },
   "parser": "babel-eslint",
-  "extends": ["react-app", "airbnb", "prettier"],
+  "extends": ["eslint:recommended", "plugin:react/recommended", "react-app"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
